# rust

./: .gitignore  README.md
guessing_game/src/: main.rs
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
hello_world/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
todo_api/: .env  .gitignore  Cargo.toml  docker-compose.yml
todo_api/migrations/: 20230426104415_initial.sql
todo_api/src/: main.rs  todos.rs
