[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chrono = "0.4.24"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "migrate", "offline", "chrono", "macros", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
